--- a/styles/map.css
+++ b/styles/map.css
@@ -94,11 +94,10 @@
 .territory-39:hover,
 .territory-40:hover,
 .territory-41:hover {
-<<<<<<< HEAD
-    fill: #ffffff;
-=======
-  opacity: 0.5;
->>>>>>> c08c894fc4e442eb99010ae9a7f03368e2d135ea
+    
+    opacity: 0.5;
+    stroke: rgb(187, 12, 12);
+    stroke-width: 1.5px;
 }
 
 .territory-0 {
